# treinamentos

./: 404.html  index.html  pyproject.toml
mkdocs/: mkdocs.yml
mkdocs/docs/: index.md
mkdocs/docs/portal_cliente/: acesso.md  documentos.md  lancamentos.md  portal_cliente.md  solicitacoes.md
mkdocs/docs/whatsapp/: novidade.md
mkdocs/site/: 404.html  index.html
mkdocs/site/assets/: extra.css
mkdocs/site/portal_cliente/acesso/: index.html
mkdocs/site/portal_cliente/documentos/: index.html
mkdocs/site/portal_cliente/lancamentos/: index.html
mkdocs/site/portal_cliente/portal_cliente/: index.html
mkdocs/site/portal_cliente/solicitacoes/: index.html
mkdocs/site/search/: search_index.json
portal_cliente/acesso/: index.html
portal_cliente/documentos/: index.html
portal_cliente/lancamentos/: index.html
portal_cliente/portal_cliente/: index.html
portal_cliente/solicitacoes/: index.html
portalc_cliente/: index.html
search/: search_index.json
whatsapp/novidade/: index.html
