[tool.poetry]
name = "ogura-mkdocs"
version = "0.1.0"
description = ""
authors = ["pauloandrade1985 <paulosmandrade@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.6.1"
pymdown-extensions = "^10.15"
mkdocs-material = "^9.6.12"
mkdocs-video = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
